--- a/chat.html
+++ b/chat.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <script src="http://1.2.3.4:1223/socket.io/socket.io.js"></script>
-  <script src="http://1.2.3.4/js/jquery.js"></script>
-  <script src="http://1.2.3.4/js/bootstrap.js"></script>
-  <link rel="stylesheet" type="text/css" href="http://1.2.3.4/css/bootstrap.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.js"></script>
+  <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+  <link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css">
+  <script src="chat.js" type="text/javascript"></script>
   <script>
   $(document).ready(function(){
-    var socket = io.connect("1.2.3.4:1223");
+    var io = require("socket.io");
+    var socket = io.connect("127.0.0.1:8081");
     $("#chat").hide();
     $("#name").focus();
     $("form").submit(function(event){
@@ -71,30 +73,32 @@
     });
   });
 </script>
+</head>
 <body>
 
-<div class="row">
-  <div class="span2">
-    <ul id="people" class="unstyled"></ul>
+<div class="container">
+  <div class="row">
+    <div class="span2">
+      <ul id="people" class="unstyled"></ul>
+    </div>
+    <div class="span4">
+      <ul id="msgs" class="unstyled"></ul>
+    </div>
   </div>
-  <div class="span4">
-    <ul id="msgs" class="unstyled"></ul>
-  </div>
-</div>
-<div class="row">
-  <div class="span5 offset2" id="login">
-    <form class="form-inline">
-        <input type="text" class="input-small" placeholder="Your name" id="name">
-      <input type="button" name="join" id="join" value="Join" class="btn btn-primary">
-    </form>
-  </div>
+  <div class="row">
+    <div class="span5 offset2" id="login">
+      <form class="form-inline">
+          <input type="text" class="input-small" placeholder="Your name" id="name">
+        <input type="button" name="join" id="join" value="Join" class="btn btn-primary">
+      </form>
+    </div>
 
-  <div class="span5 offset2" id="chat">
-    <form id="2" class="form-inline">
-        <input type="text" class="input" placeholder="Your message" id="msg">
-      <input type="button" name="send" id="send" value="Send" class="btn btn-success">
-    </form>
-  </div>
+    <div class="span5 offset2" id="chat">
+      <form id="2" class="form-inline">
+          <input type="text" class="input" placeholder="Your message" id="msg">
+        <input type="button" name="send" id="send" value="Send" class="btn btn-success">
+      </form>
+    </div>
   </div>
 </div>
 
